# winetricks

./: .gitignore  Cargo.toml  PKGBUILD  README.md  RELEASE.md  job-logs.txt
.github/scripts/: build-arch.sh  build-rpm.sh
.github/workflows/: build.yml  ci.yml  release.yml
files/json/apps/: 3m_library.json  7zip.json  busybox.json  cmake.json  colorprofile.json  depends.json  dotnet20sdk.json  dxsdk_jun2010.json  dxwnd.json  firefox.json  fontxplorer.json  foobar2000.json  hhw.json  iceweasel.json  irfanview.json  kobo.json  mozillabuild.json  njjwp_trial.json  npp.json  ollydbg200.json  origin.json  procexp.json  protectionid.json  psdk2003.json  psdkwin71.json  sketchup.json  utorrent.json  vc2005express.json  vc2005expresssp1.json  vc2005trial.json  vc2010express.json  vstools2019.json  winamp.json
files/json/benchmarks/: 3dmark2000.json  3dmark2001.json  wglgears.json
files/json/dlls/: amstream.json  art2k7min.json  art2kmin.json  avifil32.json  binkw32.json  cabinet.json  cinepak.json  cmd.json  cnc_ddraw.json  comctl32.json  comctl32ocx.json  crypt32.json  d2gl.json  d3dcompiler_42.json  d3dcompiler_47.json  d3drm.json  d3dx10_43.json  d3dx11_43.json  d3dx9_26.json  d3dx9_28.json  d3dx9_29.json  d3dx9_32.json  d3dx9_34.json  d3dx9_37.json  d3dx9_38.json  d3dx9_39.json  d3dx9_41.json  d3dx9_42.json  dinput.json  dinput8.json  dinputto8.json  directshow.json  directx9.json  dmband.json  dmcompos.json  dmime.json  dmloader.json  dmscript.json  dmusic.json  dmusic32.json  (+129 more)
files/json/fonts/: andale.json  arial.json  baekmuk.json  calibri.json  candara.json  cjkfonts.json  comicsans.json  consolas.json  constantia.json  corbel.json  corefonts.json  courier.json  droid.json  eufonts.json  fakejapanese.json  fakejapanese_ipamona.json  fakejapanese_vlgothic.json  georgia.json  impact.json  meiryo.json  micross.json  opensymbol.json  pptfonts.json  sourcehansans.json  times.json  trebuchet.json  uff.json  unifont.json  verdana.json  vlgothic.json  webdings.json  wenquanyi.json
files/json/settings/: bad.json  fontfix.json  good.json  hosts.json  native_mdac.json  native_oleaut32.json  nt351.json  nt40.json  sandbox.json  set_mididevice.json  set_userpath.json  vista.json  win2k.json  win2k3.json  win31.json  win7.json  win8.json  win81.json  win98.json
verbs_metadata/apps/: adobe_diged.json  adobe_diged4.json  autohotkey.json  controlpad.json  controlspy.json  dbgview.json  dxsdk_aug2006.json  emu8086.json  ev3.json  kindle.json  mingw.json  mpc.json  mspaint.json  mt4.json  njcwp_trial.json  nook.json  ollydbg110.json  ollydbg201.json  openwatcom.json  safari.json  steam.json  ubisoftconnect.json  utorrent3.json  vc2008express.json  vlc.json  winrar.json  wme9.json
verbs_metadata/benchmarks/: 3dmark03.json  3dmark05.json  3dmark06.json  stalker_pripyat_bench.json  unigine_heaven.json
verbs_metadata/dlls/: allcodecs.json  art2k7min.json  art2kmin.json  atmlib.json  binkw32.json  cabinet.json  cmd.json  cnc_ddraw.json  comctl32.json  comdlg32ocx.json  crypt32_winxp.json  d2gl.json  d3dcompiler_43.json  d3dcompiler_46.json  d3dcompiler_47.json  d3dx10.json  d3dx11_42.json  d3dx9.json  d3dx9_24.json  d3dx9_25.json  d3dx9_27.json  d3dx9_30.json  d3dx9_31.json  d3dx9_33.json  d3dx9_35.json  d3dx9_36.json  d3dx9_40.json  d3dx9_43.json  d3dxof.json  dbghelp.json  devenum.json  dirac.json  directmusic.json  directplay.json  dmstyle.json  dmsynth.json  dotnet20.json  dotnet20sp1.json  dotnet20sp2.json  dotnet30.json  (+127 more)
verbs_metadata/fonts/: allfonts.json  cambria.json  comicsans.json  courier.json  fakechinese.json  fakekorean.json  ipamona.json  liberation.json  lucida.json  tahoma.json  takao.json  times.json  trebuchet.json  wenquanyizenhei.json
verbs_metadata/settings/: forcemono.json  heapcheck.json  isolate_home.json  nocrashdialog.json  remove_mono.json  win10.json  win11.json  win20.json  win2k8.json  win2k8r2.json  win30.json  win95.json  winme.json  winxp.json
winetricks-cli/: Cargo.toml
winetricks-cli/debian/: control.template
winetricks-cli/src/: main.rs
winetricks-converter/: Cargo.toml
winetricks-converter/src/: main.rs
winetricks-gui/: Cargo.toml
winetricks-gui/src/: cosmic_app.rs  main.rs
winetricks-lib/: Cargo.toml
winetricks-lib/src/: config.rs  download.rs  error.rs  executor.rs  installer.rs  lib.rs  verb.rs  wine.rs
