[package]
name = "winetricks-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GTK4 GUI frontend for Winetricks"

[[bin]]
name = "winetricks-gui"
path = "src/main.rs"

[dependencies]
winetricks-lib = { path = "../winetricks-lib" }
gtk4 = { workspace = true }
gdk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
adw = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

