[package]
name = "winetricks-gui"
version = "0.1.0"
edition = "2021"
authors = ["Winetricks Contributors"]
license = "LGPL-2.1-or-later"

[[bin]]
name = "winetricks-gui"
path = "src/main.rs"

[dependencies]
# Core library
winetricks-lib = { path = "../winetricks-lib" }

# Iced GUI framework
iced = { version = "0.12", features = ["tokio", "image", "svg"] }

# Async runtime (shared with workspace)
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
which = { workspace = true }
dirs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
