[package]
name = "winetricks-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Winetricks - Wine package manager"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Direct dependencies
pathdiff = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }
command-group = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }

